# Fractals

./: CMakeLists.txt  LICENSE  main.cpp
CMake/: Dependencies.cmake  UnitTest.cmake
include/: abstractImageWriter.h  bitmap.h  bitmapWriter.h  colour.h  fractalBuilder.h  fractalBuilder.inl  fractalGenerator.h  mandelbrot.h  viewport.h
src/: CMakeLists.txt  abstractImageWriter.cpp  bitmap.cpp  bitmapWriter.cpp  colour.cpp  fractalBuilder.cpp  fractalGenerator.cpp  mandelbrot.cpp  viewport.cpp
